--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
             <div class=" col-md-8 col-lg-6">
               <div class="res-cont first">
                 <div class="result">
-                  <p>HTML</p>
+                  <p>HTML5</p>
                   <img src="img/css.png">
                 </div>
                 <div class="result">
-                  <p>CSS</p>
+                  <p>CSS3</p>
                   <img src="img/html.png">
                 </div>
                 <div class="result">
