--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="col-12 col-md-8">
                 <div class="bio-text mb-3 mb-md-5">
                   <p class="headings">biography</p>
-                  <p class="my-bio mb-0">Я семнадцатилетний front-end разработчик и создатель сайтов с уютных улиц Ташкента. Работаю в этой сфере около года.</p>
+                  <p class="my-bio mb-0">Я семнадцатилетний front-end разработчик и создатель сайтов. Работаю в этой сфере около года.</p>
                 </div>
               </div>
               <div class="col-12 col-md-4">
